--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@
 	left: 0;
 	width: 100000px;
 	height: 100000px;
-	zoom: 0.05;
+	transform: scale(0.05);
 	font-size: 200pt;
 	text-align: center;
 	}
