--- a/map.html
+++ b/map.html
@@ -8,7 +8,10 @@
 	left: 0;
 	width: 100000px;
 	height: 100000px;
-	transform: scale(0.05);
+	-webkit-transform: scale(0.05,0.05);
+	-moz-transform: scale(0.05,0.05);
+	-o-transform: scale(0.05,0.05);
+	transform: scale(0.05,0.05);
 	font-size: 200pt;
 	text-align: center;
 	}
